<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/lblAnaekran1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/lbl_ana_ekran_1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="56sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/color_ana_ekran_1" />

    <TextView
        android:id="@+id/lblAnaEkran2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAnaekran1"
        android:layout_below="@+id/lblAnaekran1"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/lbl_ana_ekran_2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp"
        android:textColor="@color/color_ana_ekran_2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <ImageButton
        android:id="@+id/btnBaslat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblAnaEkran2"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/btn_yeni_oyun"
        android:scaleType="fitCenter"
        android:src="@drawable/play_up"
        android:layout_margin="25dp" />

</RelativeLayout>
